--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Weather API</title>
 </head>
 <body>
-    <h1 class="">Weather api</h1>
-    <main class="container">
+    <header class="container__header">
+        <h1>Weather api</h1>
+        <img src="assets/cloudy.png" alt="">
+    </header>
+
+    <main class="container__main">
         <div class="container__content"></div>
     </main>
+    <footer class="container__footer">Footer</footer>
+
+
     <script src="main.js"></script>
 </body>
 </html>
