--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </main>
 
     <footer class="container__footer">Footer</footer>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
